# deepeval-demo

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  TESTING.md  pyproject.toml
.github/workflows/: smoke.yml
apps/backend/: main.py
apps/backend/api/: arena_route.py  chat_route.py  deps.py  eval_route.py  models_route.py
apps/backend/chat/: service.py  session.py
apps/backend/core/: settings.py
apps/backend/eval/: store.py
apps/backend/llm/: anthropic.py  base.py  deepeval_wrap.py  ollama.py  openai.py  registry.py
apps/backend/rag/: chunker.py  embeddings.py  retriever.py  store.py
apps/frontend/: .env.local.example  package-lock.json  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/arena/: page.tsx
apps/frontend/app/chat/: page.tsx
apps/frontend/app/eval/: page.tsx
apps/frontend/components/: model-picker.tsx  nav.tsx  sources-panel.tsx
apps/frontend/lib/: api.ts  sse.ts  types.ts
knowledge/: loader.py
knowledge/curated/: buying-process.md  golden-visa.md  ibi-property-tax.md  irnr-non-resident-tax.md  itp-transfer-tax.md  mortgage-for-foreigners.md  nie-foreign-id.md  plusvalia-municipal.md  property-types.md  regions-overview.md  short-term-rental-licensing.md
knowledge/scripts/: ingest_pdfs.py  ingest_wikipedia.py
knowledge/synth/: goldens.json  goldens.py
scripts/: list_knowledge.py  run_eval_matrix.py  seed_chroma.py
tests/: conftest.py  test_knowledge_loader.py
tests/api/: conftest.py  test_endpoints.py
tests/eval/: conftest.py  test_conversational.py  test_custom.py  test_single_turn.py
tests/eval/agentic/: test_negative.py  test_positive.py
tests/eval/conversational/: test_negative.py
tests/eval/custom/: test_negative.py
tests/eval/rag/: test_negative.py  test_positive.py
tests/eval/safety/: test_positive.py
tests/eval/single_turn/: test_negative.py
tests/llm/: test_base_and_registry.py
tests/rag/: test_pipeline.py
