[project]
name = "deepeval-lab"
version = "0.1.0"
description = "DeepEval playground: multi-model chat with RAG (Spanish real estate) and full metric coverage"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

# Core runtime deps — kept minimal at Phase 0.
# We expand per-phase so it stays clear what each piece is for.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "structlog>=24.4",
]

[project.optional-dependencies]
# LLM providers — added when we wire adapters (Phase 3)
llm = [
    "openai>=1.54",
    "anthropic>=0.39",
    "ollama>=0.4",
]

# RAG stack — added in Phase 2
rag = [
    "chromadb>=0.5.20",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "wikipedia-api>=0.7",
    "tiktoken>=0.8",
    "langchain-text-splitters>=0.3",
]

# DeepEval + test harness — used from Phase 6 onward; pytest is needed earlier
eval = [
    "deepeval>=3.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
]

# Dev tooling
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "types-requests",
]

# Convenience: install everything for local dev
all = [
    "deepeval-lab[llm,rag,eval,dev]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "knowledge*", "tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: fast cheap tests, run on every CI pull request (gpt-4o-mini judge)",
    "local: heavy tests, run only on dev machines (uses Ollama, full red-teaming, etc.)",
    "rag: tests for the RAG pipeline",
    "agentic: tests for agent behaviour",
    "safety: red-teaming and safety tests",
    "multimodal: tests involving images",
    "conversational: multi-turn conversation tests",
    "custom: G-Eval / DAG / Arena-style custom metrics",
]
